# klartext

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  klartext_init_prompt.md  pyproject.toml
.claude/agents/: git-agent.md
backend/: bm25_index.py  chunker.py  citation_verifier.py  config.py  enricher.py  llm.py  main.py  models.py  pdf_parser.py  prompt_builder.py  reranker.py  retriever.py
data/eval/: _example.json
data/tweets/: _example.json
docs/: API.md  ARCHITECTURE.md  CONVENTIONS.md  DESIGN-DECISIONS.md  EVALUATION.md  FRONTEND.md  PIPELINE.md  README.md  SETUP.md  TROUBLESHOOTING.md
docs/design/: Klartext.html
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: chatStream.js
frontend/src/components/: BelowThresholdState.jsx  ChatWindow.jsx  DevToggle.jsx  EmptyState.jsx  ErrorState.jsx  MessageBubble.jsx  PartyChips.jsx  PersonaSelector.jsx  QueryInput.jsx  Sidebar.jsx  SourcesPanel.jsx
frontend/src/constants/: parties.js
frontend/src/mocks/: fixtures.js  mockStream.js  scenarios.js
frontend/src/state/: ChatProvider.jsx  chatStore.js  useRunChat.js
scripts/: eval.py  ingest.py
tests/: conftest.py  test_bm25_index.py  test_chunker.py  test_citation_verifier.py  test_config.py  test_enricher.py  test_ingest.py  test_llm.py  test_main.py  test_models.py  test_pdf_parser.py  test_prompt_builder.py  test_reranker.py  test_retriever.py
