[project]
name = "klartext"
version = "0.1.0"
description = "Lokaler politischer RAG-Chatbot für ein Hochschulprojekt"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "chromadb>=0.5",
    "sentence-transformers>=3.2",
    "FlagEmbedding>=1.3",
    "pymupdf>=1.24",
    "rank-bm25>=0.2.2",
    "ollama>=0.4",
    "sse-starlette>=2.1",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "structlog>=24.4",
    "ragas>=0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pre-commit>=4.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# en-dashes are intentional in German citation format ``[PARTEI – Seite X]``.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
